# strtk

./: CMakeLists.txt  strtk.hpp
include/strtk/: strtk.hpp
